dtext: fix margins of [code] block.
Fix [code] blocks having a default 1em top margin from the browser. This was especially noticeable
inside [expand] blocks, where this margin was added on top of the padding from the [expand] block to
produce too much blank space.

This also affects <pre> tags in translation notes. This could break some notes, but it appears that
in most cases the extra top margin on the <pre> tag is unwanted.

--- a/app/javascript/src/styles/base/010_reset.scss
+++ b/app/javascript/src/styles/base/010_reset.scss
@@ -17,7 +17,7 @@ html, body {
   border-color: var(--default-border-color);
 }
 
-body, h1, h2, h3, h4, h5, h6, p, ul, ol, li, blockquote, dl, dd, menu, input {
+body, h1, h2, h3, h4, h5, h6, p, ul, ol, li, blockquote, pre, dl, dd, menu, input {
   margin: 0;
 }
 
